@@ -318,11 +318,16 @@ static CSSMutableStyleDeclaration* rightToLeftDeclaration()
 CSSStyleSelector::CSSStyleSelector(Document* document, StyleSheetList* styleSheets, CSSStyleSheet* mappedElementSheet,
                                    CSSStyleSheet* pageUserSheet, const Vector<RefPtr<CSSStyleSheet> >* pageGroupUserSheets, const Vector<RefPtr<CSSStyleSheet> >* documentUserSheets,
                                    bool strictParsing, bool matchAuthorAndUserStyles)
-    : m_backgroundData(BackgroundFillLayer)
+    : m_hasUAAppearance(false)
+    , m_backgroundData(BackgroundFillLayer)
     , m_checker(document, strictParsing)
+    , m_parentStyle(0)
+    , m_rootElementStyle(0)
     , m_element(0)
     , m_styledElement(0)
     , m_elementLinkState(NotInsideLink)
+    , m_parentNode(0)
+    , m_lineHeightValue(0)
     , m_fontDirty(false)
     , m_matchAuthorAndUserStyles(matchAuthorAndUserStyles)
     , m_sameOriginOnly(false)
